--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic);
 @import "tailwindcss";
-
 /*
 //#1F1F1F - #0B0B0E - #1F1E24 primary
 
@@ -10,19 +10,278 @@
 //#AAAAAA secondary-text
 */
 
-
-::-webkit-scrollbar{
-    width: 7px;
-    height: 7px;
-
+::-webkit-scrollbar {
+  width: 7px;
+  height: 7px;
 }
 
-::-webkit-scrollbar-thumb{
-    background: #1a1919;
-    border-radius: 10px;
+::-webkit-scrollbar-thumb {
+  background: #1a1919;
+  border-radius: 10px;
 }
 
-::-webkit-scrollbar-thumb:hover{
-    background: #6C5CE7;
-    border-radius: 10px;
+::-webkit-scrollbar-thumb:hover {
+  background: #6c5ce7;
+  border-radius: 10px;
 }
+
+/*DropDownCSS*/
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  appearance: none;
+  outline: 0;
+  box-shadow: none;
+  border: 0 !important;
+  background: #27272a;
+  background-image: none;
+  flex: 1;
+  padding: 0 0.9em;
+  color: #aaaaaa;
+  cursor: pointer;
+  font-size: 0.85em;
+  font-family: "Poppins", sans-serif;
+}
+select:focus,
+select:active {
+  background: #aaaaaa;
+  color: #000;
+}
+
+select::-ms-expand {
+  display: none;
+}
+
+.select {
+  position: relative;
+  display: flex;
+  width: 18em;
+  height: 2.8em;
+  line-height: 3;
+  background: #27272a;
+  overflow: hidden;
+  border-radius: 0.25em;
+}
+.select:focus-within {
+  background: #fff;
+}
+.select:focus-within::after {
+  transition: all;
+  background: #aaaaaa;
+  color: #000;
+}
+
+.select::after {
+  content: "\25BC";
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 0 1em;
+  background: #27272a;
+  cursor: pointer;
+  pointer-events: none;
+  transition: 0.25s all ease;
+}
+
+.select:hover::after {
+  color: #6c5ce7;
+}
+
+/*fonts*/
+.poppins-thin {
+  font-family: "Poppins", sans-serif;
+  font-weight: 100;
+  font-style: normal;
+}
+
+.poppins-extralight {
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  font-style: normal;
+}
+
+.poppins-light {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: normal;
+}
+
+.poppins-regular {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.poppins-medium {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
+
+.poppins-semibold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-style: normal;
+}
+
+.poppins-bold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
+
+.poppins-extrabold {
+  font-family: "Poppins", sans-serif;
+  font-weight: 800;
+  font-style: normal;
+}
+
+.poppins-black {
+  font-family: "Poppins", sans-serif;
+  font-weight: 900;
+  font-style: normal;
+}
+
+.poppins-thin-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 100;
+  font-style: italic;
+}
+
+.poppins-extralight-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 200;
+  font-style: italic;
+}
+
+.poppins-light-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 300;
+  font-style: italic;
+}
+
+.poppins-regular-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
+.poppins-medium-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 500;
+  font-style: italic;
+}
+
+.poppins-semibold-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+  font-style: italic;
+}
+
+.poppins-bold-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-style: italic;
+}
+
+.poppins-extrabold-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 800;
+  font-style: italic;
+}
+
+.poppins-black-italic {
+  font-family: "Poppins", sans-serif;
+  font-weight: 900;
+  font-style: italic;
+}
+
+/*#2
+
+// <weight>: Use a value from 200 to 800
+// <uniquifier>: Use a unique and descriptive class name*/
+
+.oxanium {
+  font-family: "Oxanium", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 800;
+  font-style: normal;
+}
+.oxanium-l {
+  font-family: "Oxanium", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+}
+
+/*Animation on Heading
+
+.h {
+  font-size: 5rem;
+  color: transparent;
+  position: relative;
+  animation: glitch 2s infinite;
+}
+
+.h::before,
+.h::after {
+  content: "Zinematic";
+  position: absolute;
+  top: 0;
+  left: 0;
+  opacity: 0.8;
+}
+
+.h::before {
+  color: #f0f;
+  animation: glitchTop 2s infinite;
+}
+
+.h::after {
+  color: #0ff;
+  animation: glitchBottom 2s infinite;
+}
+
+@keyframes glitch {
+  0% {
+    transform: none;
+  }
+  20% {
+    transform: skewX(5deg);
+  }
+  40% {
+    transform: skewX(-5deg);
+  }
+  60% {
+    transform: skewX(5deg);
+  }
+  80% {
+    transform: skewX(-5deg);
+  }
+  100% {
+    transform: none;
+  }
+}
+
+@keyframes glitchTop {
+  0%,
+  100% {
+    clip-path: inset(0 0 85% 0);
+  }
+  50% {
+    clip-path: inset(0 0 30% 0);
+    transform: translate(-2px, -2px);
+  }
+}
+
+@keyframes glitchBottom {
+  0%,
+  100% {
+    clip-path: inset(85% 0 0 0);
+  }
+  50% {
+    clip-path: inset(30% 0 0 0);
+    transform: translate(2px, 2px);
+  }
+}*/
